@@ -2133,6 +2133,14 @@ name|other
 operator|.
 name|getMinimumNumberShouldMatch
 argument_list|()
+operator|&&
+name|this
+operator|.
+name|disableCoord
+operator|==
+name|other
+operator|.
+name|disableCoord
 return|;
 block|}
 comment|/** Returns a hash code value for this object.*/
@@ -2160,6 +2168,14 @@ argument_list|()
 operator|+
 name|getMinimumNumberShouldMatch
 argument_list|()
+operator|+
+operator|(
+name|disableCoord
+condition|?
+literal|17
+else|:
+literal|0
+operator|)
 return|;
 block|}
 block|}
