@@ -639,7 +639,9 @@ name|expected
 init|=
 operator|new
 name|BooleanQuery
-argument_list|()
+argument_list|(
+literal|true
+argument_list|)
 decl_stmt|;
 name|assertEquals
 argument_list|(
